test/expect/cmd.gccxml-and-c++1y.stderr.txt
^error: '--castxml-gccxml' does not work with c\+\+1y$
